Navbar Is Finished

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>My Second Assignment</title>
 </head>
 <body>
-    <header>
-
+    <header class="head-section display-flex">
+            <nav class="nav-container display-flex">
+                <div class="nav-school-name display-flex">
+                    <img class="nav-img" src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
+                    <h1 class="school-name">Brac Primary School</h1>
+                </div>   
+                <ul class="nav-links display-flex">
+                    <li class="nav-item"><a href="" class="nav-link orange">Home</a></li>
+                    <li class="nav-item"><a href="" class="nav-link sky-blue">About</a></li>
+                    <li class="nav-item"><a href="" class="nav-link aqua">Facilites</a></li>
+                    <li class="nav-item"><a href="" class="nav-link purple">Admission</a></li>
+                </ul>
+                <button class="primary-btn">Contrac</button>
+            </nav>
     </header>
     <main>
 
