Section One And Two Are Finished

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>My Second Assignment</title>
 </head>
 <body>
@@ -15,6 +16,7 @@
                 <div class="nav-school-name display-flex">
                     <img class="nav-img" src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
                     <h1 class="school-name">Brac Primary School</h1>
+                    <span class="nav-icon"><i class="fa-solid fa-bars"></i></span>
                 </div>   
                 <ul class="nav-links display-flex">
                     <li class="nav-item"><a href="" class="nav-link orange">Home</a></li>
@@ -26,7 +28,47 @@
             </nav>
     </header>
     <main>
-
+        <section class="section-one display-flex">
+            <div class="students-container display-flex">
+                 <div class="students-self">
+                    <h1 class="boys-tittle-name"><span class="orange">Empowering</span> students from small age <span class="sky-blue">towards vision</span></h1>
+                    <p class="boys-self">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                    <button class="primary-btn-2 primary-btn">Enroll Now</button>
+                 </div>
+                 <div class="boy-container">
+                    <img src="B11-A2-Kids-School/assets/hero-kids.png" alt="hero-kids.png">
+                 </div>
+            </div>
+        </section>
+        <section class="section-two display-flex">
+            <div class="card-heading">
+               <h1 class="card-head">Standard Curriculum</h1>
+            </div>
+            <div class="card-container display-flex">
+                <div class="card-box" id="card-box-one">
+                    <img class="card-box-img" src="B11-A2-Kids-School/assets/kinder.png" alt="kinder.png">
+                    <span class="card-tittles">Kinder (3-6) Years</span>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                    <span class="read-more">Read More</span>
+                </div>
+                <div class="card-box" id="card-box-two">
+                    <img  class="card-box-img" src="B11-A2-Kids-School/assets/kinder.png" alt="kinder.png">
+                    <span class="card-tittles">Kinder (3-6) Years</span>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                    <span class="read-more">Read More</span>
+                </div>
+                <div class="card-box" id="card-box-three">
+                    <img class="card-box-img" src="B11-A2-Kids-School/assets/kinder.png" alt="kinder.png">
+                    <span class="card-tittles">Kinder (3-6) Years</span>
+                    <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                    <span class="read-more">Read More</span>
+                </div>
+            </div>
+            <div class="icon-container display-flex">
+                <div class="less-than display-flex"><</div>
+                <div class="greater-than display-flex">></div>
+            </div>
+        </section>
     </main>
     <footer>
 
