The Main Part Is Done

--- a/index.html
+++ b/index.html
@@ -69,6 +69,42 @@
                 <div class="greater-than display-flex">></div>
             </div>
         </section>
+        <section class="section-three display-flex">
+            <div>
+               <h4 class="card-head">Our Stories</h4>
+            </div>
+            <div class="stories-container display-flex">
+                <div class="baby-container">
+                    <button class="baby-btn">November 19, 2019</button>
+                   <img class="baby-img" src="B11-A2-Kids-School/assets/story-1.png" alt="story-1.png">
+                   <h4 class="baby-tittle">A fun toddler coloring training on classroom </h4>
+                   <p class="baby-description">Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+                </div>
+                <div class="babys-container display-flex">
+                   <div class="babys-pic">
+                    <button class="babys-btn">November 19, 2019</button>
+                    <img class="babys-img" src="B11-A2-Kids-School/assets/story-2.png" alt="story-2.png">
+                    <p class="babys-description">Find out if a school fits the family’s needs</p>
+                   </div>
+                   <div class="babys-pic">
+                    <button class="babys-btn" id="babys-btn-two">November 19, 2019</button>
+                    <img class="babys-img" src="B11-A2-Kids-School/assets/story-3.png" alt="story-3.png">
+                    <p class="babys-description">Summer math & literacy centres for kids</p>
+                   </div>
+                   <div class="babys-pic">
+                    <button class="babys-btn">September 19, 2019</button>
+                    <img class="babys-img" src="B11-A2-Kids-School/assets/story-4.png" alt="story-4.png">
+                    <p class="babys-description">Classroom management techniques for new tutors</p>
+                   </div>
+                   <div class="babys-pic">
+                    <button class="babys-btn" id="babys-btn-four">July 19, 2019</button>
+                    <img class="babys-img" src="B11-A2-Kids-School/assets/story-5.png" alt="story-5.png">
+                    <p class="babys-description">Conversation rhymes improve kids listening</p>
+                   </div>
+                </div>
+            </div>
+            <button class="view-btn">View All</button>
+        </section>
     </main>
     <footer>
 
