Footer Part Is Done But Not Responsive

--- a/index.html
+++ b/index.html
@@ -106,8 +106,36 @@
             <button class="view-btn">View All</button>
         </section>
     </main>
-    <footer>
-
+    <footer class="display-flex">
+        <div class="footer-container display-flex">
+            <div class="footer-box-one">
+                 <div class="display-flex">
+                    <img src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
+                    <h1 class="footer-head">Kids Education</h1>
+                </div>
+                <p class="pizza">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            </div>
+            <div class="footer-box-two display-flex">
+               <div class="footer-child">
+                  <h5 class="about-school">About School</h5>
+                  <ul class="footer-links">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Facilities</li>
+                    <li>Admission</li>
+                  </ul>
+               </div>
+               <div class="footer-child">
+                 <h4 class="icon-header">Keep In Touch</h4>
+                  <div class="footer-icon">
+                    <img src="B11-A2-Kids-School/assets/fb.png" alt="fb.png">
+                    <img src="B11-A2-Kids-School/assets/dribble.png" alt="dribble.png">
+                    <img src="B11-A2-Kids-School/assets/twitter.png" alt="twitter.png">
+                    <img src="B11-A2-Kids-School/assets/google+.png" alt="google+.png">
+                  </div>
+               </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
