--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                     <span class="read-more">Read More</span>
                 </div>
                 <div class="card-box" id="card-box-two">
-                    <img  class="card-box-img" src="B11-A2-Kids-School/assets/kinder.png" alt="kinder.png">
+                    <img  class="card-box-img" src="B11-A2-Kids-School/assets/elementary.png" alt="elementary.png">
                     <span class="card-tittles">Kinder (3-6) Years</span>
                     <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
                     <span class="read-more">Read More</span>
                 </div>
                 <div class="card-box" id="card-box-three">
-                    <img class="card-box-img" src="B11-A2-Kids-School/assets/kinder.png" alt="kinder.png">
+                    <img class="card-box-img" src="B11-A2-Kids-School/assets/middle.png" alt="middle.png">
                     <span class="card-tittles">Kinder (3-6) Years</span>
                     <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
                     <span class="read-more">Read More</span>
@@ -110,7 +110,7 @@
         <div class="footer-container display-flex">
             <div class="footer-box-one">
                  <div class="display-flex">
-                    <img src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
+                    <img class="logo-png" src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
                     <h1 class="footer-head">Kids Education</h1>
                 </div>
                 <p class="pizza">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
