--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
 </head>
 <body>
     <header class="head-section display-flex">
+        <!-- Nav Container Start Here -->
             <nav class="nav-container display-flex">
+              <!-- Nav School Name Here -->
                 <div class="nav-school-name display-flex">
                     <img class="nav-img" src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
                     <h1 class="school-name">Brac Primary School</h1>
                     <span class="nav-icon"><i class="fa-solid fa-bars"></i></span>
-                </div>   
+                </div> 
+              <!--Nav Links Here  -->
                 <ul class="nav-links display-flex">
                     <li class="nav-item"><a href="" class="nav-link orange">Home</a></li>
                     <li class="nav-item"><a href="" class="nav-link sky-blue">About</a></li>
                     <li class="nav-item"><a href="" class="nav-link aqua">Facilites</a></li>
                     <li class="nav-item"><a href="" class="nav-link purple">Admission</a></li>
                 </ul>
+              <!-- Primary Button Here -->
                 <button class="primary-btn">Contrac</button>
             </nav>
+        <!-- Nav Container End Here -->
     </header>
     <main>
+        <!-- Section One Part Is Start -->
         <section class="section-one display-flex">
             <div class="students-container display-flex">
                  <div class="students-self">
@@ -35,107 +41,131 @@
                     <p class="boys-self">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
                     <button class="primary-btn-2 primary-btn">Enroll Now</button>
                  </div>
+        <!-- The Hero-Kids.Png Start Here -->
                  <div class="boy-container">
                     <img src="B11-A2-Kids-School/assets/hero-kids.png" alt="hero-kids.png">
                  </div>
             </div>
         </section>
+        <!-- Section One Part Is End -->
+
+        <!-- Section Two Part Is Start -->
         <section class="section-two display-flex">
             <div class="card-heading">
                <h1 class="card-head">Standard Curriculum</h1>
             </div>
-            <div class="card-container display-flex">
-                <div class="card-box" id="card-box-one">
-                    <img class="card-box-img" src="B11-A2-Kids-School/assets/kinder.png" alt="kinder.png">
-                    <span class="card-tittles">Kinder (3-6) Years</span>
-                    <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
-                    <span class="read-more">Read More</span>
+                <div class="card-container display-flex">
+                <!-- Card Box One Start Here -->
+                    <div class="card-box" id="card-box-one">
+                        <img class="card-box-img" src="B11-A2-Kids-School/assets/kinder.png" alt="kinder.png">
+                        <span class="card-tittles">Kinder (3-6) Years</span>
+                        <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                        <span class="read-more">Read More</span>
+                    </div>
+                <!-- Card Box Two Start Here -->
+                    <div class="card-box" id="card-box-two">
+                        <img  class="card-box-img" src="B11-A2-Kids-School/assets/elementary.png" alt="elementary.png">
+                        <span class="card-tittles">Kinder (3-6) Years</span>
+                        <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                        <span class="read-more">Read More</span>
+                    </div>
+                <!-- Card Box Three Start Here -->
+                    <div class="card-box" id="card-box-three">
+                        <img class="card-box-img" src="B11-A2-Kids-School/assets/middle.png" alt="middle.png">
+                        <span class="card-tittles">Kinder (3-6) Years</span>
+                        <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
+                        <span class="read-more">Read More</span>
+                    </div>
+                <!-- The Card Box End Here -->
                 </div>
-                <div class="card-box" id="card-box-two">
-                    <img  class="card-box-img" src="B11-A2-Kids-School/assets/elementary.png" alt="elementary.png">
-                    <span class="card-tittles">Kinder (3-6) Years</span>
-                    <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
-                    <span class="read-more">Read More</span>
-                </div>
-                <div class="card-box" id="card-box-three">
-                    <img class="card-box-img" src="B11-A2-Kids-School/assets/middle.png" alt="middle.png">
-                    <span class="card-tittles">Kinder (3-6) Years</span>
-                    <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
-                    <span class="read-more">Read More</span>
-                </div>
-            </div>
+                <!-- Less-Greater-Than Symbol Here-->
             <div class="icon-container display-flex">
                 <div class="less-than display-flex"><</div>
                 <div class="greater-than display-flex">></div>
             </div>
         </section>
+        <!-- Section Two Part Is End -->
+
+        <!-- Section Three Part Is Start -->
         <section class="section-three display-flex">
             <div>
                <h4 class="card-head">Our Stories</h4>
             </div>
             <div class="stories-container display-flex">
+        <!-- The Baby Part Start Here -->
                 <div class="baby-container">
                     <button class="baby-btn">November 19, 2019</button>
-                   <img class="baby-img" src="B11-A2-Kids-School/assets/story-1.png" alt="story-1.png">
-                   <h4 class="baby-tittle">A fun toddler coloring training on classroom </h4>
-                   <p class="baby-description">Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+                    <img class="baby-img" src="B11-A2-Kids-School/assets/story-1.png" alt="story-1.png">
+                    <h4 class="baby-tittle">A fun toddler coloring training on classroom </h4>
+                    <p class="baby-description">Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
                 </div>
+        <!-- The Baby Part End Here -->
                 <div class="babys-container display-flex">
-                   <div class="babys-pic">
-                    <button class="babys-btn">November 19, 2019</button>
-                    <img class="babys-img" src="B11-A2-Kids-School/assets/story-2.png" alt="story-2.png">
-                    <p class="babys-description">Find out if a school fits the family’s needs</p>
-                   </div>
-                   <div class="babys-pic">
-                    <button class="babys-btn" id="babys-btn-two">November 19, 2019</button>
-                    <img class="babys-img" src="B11-A2-Kids-School/assets/story-3.png" alt="story-3.png">
-                    <p class="babys-description">Summer math & literacy centres for kids</p>
-                   </div>
-                   <div class="babys-pic">
-                    <button class="babys-btn">September 19, 2019</button>
-                    <img class="babys-img" src="B11-A2-Kids-School/assets/story-4.png" alt="story-4.png">
-                    <p class="babys-description">Classroom management techniques for new tutors</p>
-                   </div>
-                   <div class="babys-pic">
-                    <button class="babys-btn" id="babys-btn-four">July 19, 2019</button>
-                    <img class="babys-img" src="B11-A2-Kids-School/assets/story-5.png" alt="story-5.png">
-                    <p class="babys-description">Conversation rhymes improve kids listening</p>
-                   </div>
+                    <div class="babys-pic">
+                        <button class="babys-btn">November 19, 2019</button>
+                        <img class="babys-img" src="B11-A2-Kids-School/assets/story-2.png" alt="story-2.png">
+                        <p class="babys-description">Find out if a school fits the family’s needs</p>
+                    </div>
+                    <div class="babys-pic">
+                        <button class="babys-btn" id="babys-btn-two">November 19, 2019</button>
+                        <img class="babys-img" src="B11-A2-Kids-School/assets/story-3.png" alt="story-3.png">
+                        <p class="babys-description">Summer math & literacy centres for kids</p>
+                    </div>
+                    <div class="babys-pic">
+                        <button class="babys-btn">September 19, 2019</button>
+                        <img class="babys-img" src="B11-A2-Kids-School/assets/story-4.png" alt="story-4.png">
+                        <p class="babys-description">Classroom management techniques for new tutors</p>
+                    </div>
+                    <div class="babys-pic">
+                        <button class="babys-btn" id="babys-btn-four">July 19, 2019</button>
+                        <img class="babys-img" src="B11-A2-Kids-School/assets/story-5.png" alt="story-5.png">
+                        <p class="babys-description">Conversation rhymes improve kids listening</p>
+                    </div>
                 </div>
+        <!-- The Baby's Part End Here -->
             </div>
             <button class="view-btn">View All</button>
         </section>
+         <!-- Section Three Part Is End -->
     </main>
     <footer class="display-flex">
+    <!--Footer Container Start Here  -->
         <div class="footer-container display-flex">
+            <!-- Footer Box One Start Here -->
             <div class="footer-box-one">
                  <div class="display-flex">
                     <img class="logo-png" src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
                     <h1 class="footer-head">Kids Education</h1>
-                </div>
-                <p class="pizza">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                 </div>
+                 <p class="pizza">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted 
+                 bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
             </div>
+        <!-- Footer Box Two Start Here -->
             <div class="footer-box-two display-flex">
                <div class="footer-child">
                   <h5 class="about-school">About School</h5>
                   <ul class="footer-links">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Facilities</li>
-                    <li>Admission</li>
+                     <li>Home</li>
+                     <li>About</li>
+                     <li>Facilities</li>
+                     <li>Admission</li>
                   </ul>
                </div>
+            <!-- Footer Child Start Here -->
                <div class="footer-child">
-                 <h4 class="icon-header">Keep In Touch</h4>
-                  <div class="footer-icon">
-                    <img src="B11-A2-Kids-School/assets/fb.png" alt="fb.png">
-                    <img src="B11-A2-Kids-School/assets/dribble.png" alt="dribble.png">
-                    <img src="B11-A2-Kids-School/assets/twitter.png" alt="twitter.png">
-                    <img src="B11-A2-Kids-School/assets/google+.png" alt="google+.png">
-                  </div>
-               </div>
+                   <h4 class="icon-header">Keep In Touch</h4>
+                   <div class="footer-icon">
+                       <img src="B11-A2-Kids-School/assets/fb.png" alt="fb.png">
+                       <img src="B11-A2-Kids-School/assets/dribble.png" alt="dribble.png">
+                       <img src="B11-A2-Kids-School/assets/twitter.png" alt="twitter.png">
+                       <img src="B11-A2-Kids-School/assets/google+.png" alt="google+.png">
+                   </div>
+                </div>
+            <!-- Footer Child End Here -->
             </div>
+        <!-- Footer Box Two End Here -->
         </div>
+    <!--Footer Container End Here  -->
     </footer>
 </body>
 </html>
