Again Update My Code

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 </head>
 <body>
     <header class="head-section display-flex">
-        <!-- Nav Container Start Here -->
+<!-- Nav Container Start Here -->
             <nav class="nav-container display-flex">
               <!-- Nav School Name Here -->
-                <div class="nav-school-name display-flex">
+                <div class="nav-school-name display-flex .hidden">
                     <img class="nav-img" src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
                     <h1 class="school-name">Brac Primary School</h1>
-                    <span class="nav-icon"><i class="fa-solid fa-bars"></i></span>
                 </div> 
               <!--Nav Links Here  -->
                 <ul class="nav-links display-flex">
@@ -30,10 +29,10 @@
               <!-- Primary Button Here -->
                 <button class="primary-btn">Contrac</button>
             </nav>
-        <!-- Nav Container End Here -->
+<!-- Nav Container End Here -->
     </header>
     <main>
-        <!-- Section One Part Is Start -->
+<!-- Section One Part Is Start -->
         <section class="section-one display-flex">
             <div class="students-container display-flex">
                  <div class="students-self">
@@ -47,9 +46,9 @@
                  </div>
             </div>
         </section>
-        <!-- Section One Part Is End -->
+<!-- Section One Part Is End -->
 
-        <!-- Section Two Part Is Start -->
+<!-- Section Two Part Is Start -->
         <section class="section-two display-flex">
             <div class="card-heading">
                <h1 class="card-head">Standard Curriculum</h1>
@@ -84,9 +83,9 @@
                 <div class="greater-than display-flex">></div>
             </div>
         </section>
-        <!-- Section Two Part Is End -->
+<!-- Section Two Part Is End -->
 
-        <!-- Section Three Part Is Start -->
+<!-- Section Three Part Is Start -->
         <section class="section-three display-flex">
             <div>
                <h4 class="card-head">Our Stories</h4>
@@ -126,10 +125,10 @@
             </div>
             <button class="view-btn">View All</button>
         </section>
-         <!-- Section Three Part Is End -->
+<!-- Section Three Part Is End -->
     </main>
     <footer class="display-flex">
-    <!--Footer Container Start Here  -->
+<!--Footer Container Start Here  -->
         <div class="footer-container display-flex">
             <!-- Footer Box One Start Here -->
             <div class="footer-box-one">
@@ -165,7 +164,7 @@
             </div>
         <!-- Footer Box Two End Here -->
         </div>
-    <!--Footer Container End Here  -->
+<!--Footer Container End Here  -->
     </footer>
 </body>
 </html>
