The Second Assignment Done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <!-- Nav Container Start Here -->
             <nav class="nav-container display-flex">
               <!-- Nav School Name Here -->
-                <div class="nav-school-name display-flex .hidden">
+                <div class="nav-school-name display-flex">
                     <img class="nav-img" src="B11-A2-Kids-School/assets/logo.png" alt="logo.png">
                     <h1 class="school-name">Brac Primary School</h1>
+                    <span class="nav-icon"><i class="fa-solid fa-bars"></i></span>
                 </div> 
               <!--Nav Links Here  -->
                 <ul class="nav-links display-flex">
@@ -27,7 +28,7 @@
                     <li class="nav-item"><a href="" class="nav-link purple">Admission</a></li>
                 </ul>
               <!-- Primary Button Here -->
-                <button class="primary-btn">Contrac</button>
+                <button class="primary-btn">Contract</button>
             </nav>
 <!-- Nav Container End Here -->
     </header>
@@ -64,14 +65,14 @@
                 <!-- Card Box Two Start Here -->
                     <div class="card-box" id="card-box-two">
                         <img  class="card-box-img" src="B11-A2-Kids-School/assets/elementary.png" alt="elementary.png">
-                        <span class="card-tittles">Kinder (3-6) Years</span>
+                        <span class="card-tittles"> Elementary School</span>
                         <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
                         <span class="read-more">Read More</span>
                     </div>
                 <!-- Card Box Three Start Here -->
                     <div class="card-box" id="card-box-three">
                         <img class="card-box-img" src="B11-A2-Kids-School/assets/middle.png" alt="middle.png">
-                        <span class="card-tittles">Kinder (3-6) Years</span>
+                        <span class="card-tittles">Middle (10-16) Years</span>
                         <p class="card-description">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis parturient</p>
                         <span class="read-more">Read More</span>
                     </div>
